# HARM-rust

./: .gitignore  Cargo.toml  README.md  build.rs  dockerfile  memory.x  rust-toolchain.toml  script.jlink  script_ns.jlink
.cargo/: config.toml
c_lib/lpc55s69/board/: board.c  clock_config.c  mpu_config.c  mpu_config.h  peripherals.c  pin_mux.c  pin_mux.h  tzm_config.c
c_lib/nonsecure_entry/: callsite_tbl.h  dispatch_tbl.h  nsc.c  tz_veneer.h
metadata/: callsites.yaml  objects.yaml
python/: elf_parser.py  harm_rw  main.py  process.sh  requirements.txt
python/librw/: symbol.py
samples/: aha-compress.axf  bubblesort.axf  cover.axf  ctl-string.axf  dijkstra.axf  edn.axf  nettle-sha256.axf  picojpeg.axf  qsort.axf
src/: main.rs
src/sandbox/: mod.rs  sandbox.rs
src/secure_rt_core/: adj_tbl.rs  adjustment.rs  codeblock.rs  mod.rs  obj_tbl.rs  objects.rs  rb_tree.rs  ret_tbl.rs  sandbox.rs
src/secure_rt_core/rb_tree/: mod.rs  rb_node.rs  rb_tree.rs
