[package]
name = "harm-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbtree = "0.1"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
lpc55s6x-pac = "0.0.8"

[dependencies.stm32l5]
version = "0.14.0"
features = ["stm32l552", "rt"]

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[[bin]]
name = "harm-rt"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
