[package]
authors = [
    "Jiameng Shi <jiameng@uga.edu>",
    "Ting Jiang <Ting.Jiang1@uga.edu>",
    "Ruili Fang <Ruili.Fang@uga.edu>",
    "Jake Chandler <Jake.Chandler@uga.edu>"
]

edition = "2018"
readme = "README.md"
name = "harm-rt"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
lpc55-hal = "0.3.0"
alloc-cortex-m = "0.4.2"

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[build-dependencies]
cc = "1.0.25"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "harm-rt"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
